Fix major distortions

--- a/app/components/base/SanityImage/SanityImage.css
+++ b/app/components/base/SanityImage/SanityImage.css
@@ -5,17 +5,6 @@
   width: 100%;
 }
 
-/* Responsive images */
-.sanity-image--standard-image-wrapper,
-.sanity-image--standard-image-wrapper img {
-  width: 100%;
-}
-
-.sanity-image--standard-image-element,
-.sanity-image--standard-image-element img {
-  width: 100%;
-}
-
 /* Cover images */
 .sanity-image--cover-image-wrapper {
   position: relative;
